# tailorcv

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  cv_template.tex  docker-compose.yml  package.json  pyproject.toml  skills.yaml.example
frontend/: app.js  index.html  style.css
frontend/tests/: app.test.js
src/: app.py  llm.py  main.py  prompts.py  system_prompt.md
tests/: test_app.py  test_llm.py  test_main.py  test_prompts.py
